Use Gentium for Cyrillic again as a stopgap until Miklosic works

--- a/server/public/css/adminstyle.css
+++ b/server/public/css/adminstyle.css
@@ -18,6 +18,9 @@
 [lang=cu] { font-family: Miklosic2, sans-serif;font-size:120%; }
 [lang=orv] { font-family: Miklosic2, sans-serif;font-size:120%; }
  */
+[lang=cu] { font-family: GentiumPlusW, sans-serif;font-size:120%; }
+[lang=orv] { font-family: GentiumPlusW, sans-serif;font-size:120%; }
+
 [lang=sa] { font-family: GentiumPlusW, sans-serif; }
 [lang=grc] { font-family: GentiumPlusW, sans-serif;  }
 [lang=la] { font-family: GentiumPlusW, sans-serif;  }
