--- a/server/public/css/lrcstyle.css
+++ b/server/public/css/lrcstyle.css
@@ -28,10 +28,14 @@ span[lang=ru], span[lang=orv], span[lang=cu], span[lang=grc], span[lang=xcl], sp
 
 /* Note that this is replicated in adminstyle.css */
 [lang] { font-family: Arial Unicode MS, ALPHABETUM Unicode, TITUS Cyberbit Basic, GentiumPlusW, Code2000, Lucida Sans Unicode, Lucida Grande, Everson Mono Unicode, Arial, Helvetica, sans-serif;}
+
 /*
 [lang=cu] { font-family: Miklosic2, sans-serif;font-size:120%; }
 [lang=orv] { font-family: Miklosic2, sans-serif;font-size:120%; }
 */
+[lang=cu] { font-family: GentiumPlusW, sans-serif;font-size:120%; }
+[lang=orv] { font-family: GentiumPlusW, sans-serif;font-size:120%; }
+
 [lang=sa] { font-family: GentiumPlusW, sans-serif; }
 [lang=grc] { font-family: GentiumPlusW, sans-serif;  }
 [lang=la] { font-family: GentiumPlusW, sans-serif;  }
